---------------------------------------------------------------------------------------------------
Version: 2.1.11
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: 2020-11-16
  Changes:
    - Removed sand casting from glass as that created a deadlock at game start.
---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: 2020-11-15
  Changes:
    - Added fuel glow colors for the different tiers of uranium fuel cells in the reactor.
    - Removed sand casting from molten titanium and molten glass.
    - Added sand casting to glass made from molten glass.
---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: 2020-10-10
  Changes:
    - Fixed that raw coal wasnt set to spawn in the start area and had a low probability of spawning at all.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2020-10-06
  Changes:
    - Update ore generation code.
    - Updated factorio version to 1.0.
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2020-08-26
  Changes:
    - Remove high grade to sintered recipes.
    - Rebalanced chromite grade 3 to chromite sand.
    - Adjusted sintered nexelit to molten nexelit to be in line with the rest.
    - Adjusted and rebalanced tier 3 and 4 of raw coal processing to be better.
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2020-08-13
  Changes:
    - rebalanced the rebalance of the chromium plate processing chains to give more plates per tier.
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2020-08-13
  Changes: