@@ -2,6 +2,7 @@
 Version: 2.1.11
 Date: ????
   Changes:
+    - Added new casting recipes.
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.10
 Date: 2020-11-16
